--- a/style.css
+++ b/style.css
@@ -1,539 +1,513 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-html,body{
-    overflow-x: hidden;
+html,
+body {
+  overflow-x: hidden;
 }
-header{
-    position:fixed;
-    top: 0;
-    right: 0;
-    width: 100%;
-    z-index: 999;
-    background-color: white;
+header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  z-index: 999;
+  background-color: white;
 }
-.navbar-toggler{
-    background: #26C485;
-}
-
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   
-}
-.container-box{
-
-    width: 80%;
-    height: 200px;
-    background: #1B4965;
-    padding: 30px;
-    border-radius: 15px;
-    margin-top: 10%;
-    
-}
-.container-details{
-    text-align: center; 
-}
-#head{
-    font-size: 2rem;
-    color: white;
-}
-.container-details p{
-    color: white;
-    font-size: 1rem;
-}
-.search-bar{
-    position: relative;
-}
-.search-bar input{
-    padding: 2px;
-    width: 26%;
-    border: none;
-    
+.navbar-toggler {
+  background: #26c485;
 }
 
-.location{
-    margin-left: -25px;
-    
-}
-.search-bar input:focus{
-    outline: none;
-    border: none;
-}
-.bi-search{
-    position: absolute;
-    left: 40%;
-    top: 5px;
-    
-    cursor: pointer;
-}
-.bi-geo{
-    position: absolute;
-    right: 32%;
-    top: 2px;
-    cursor: pointer;
-}
-#btn{
-    border: none;
-    padding: 5px 20px;
-    border-radius: 3px;
-    transition: 300ms;
-
-}
-#btn:hover{
-    background: #26C485;
-    color: white;
-    cursor: pointer;
-  
-}
-#logo{
-    color: #26C485;
-    font-size: 1.5rem;
-}
-.navbar-brand{
-    font-size: 1.5rem;
-    color:black;
-}
-#loginBtn, #logoutBtn{
-    font-size: 17px;
-    padding: 8px 25px;
-    border: transparent;
-    box-shadow: 2px 2px 4px rgba(0,0,0,0.4);
-    background: #26C485;
-    color: white;
-    border-radius: 10px;
-   }
-   
-   #loginBtn:hover {
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(30,144,255,1) 0%, rgba(0,212,255,1) 100%);
-   }
-   
-   #loginBtn:active {
-    transform: translate(0em, 0.2em);
-   }
-   #recuitersBtn{
-    background: transparent;
-    border: none;
-    position: relative;
-    left: -20px;
-   }
-#recuitersBtn:hover{
-    color: #26C485;
-    cursor: pointer;
-}
-
-
- #selection{
-    padding: 0 7%;
-    margin-top: 10%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-   
-   
- }
-#selection h1{
-    font-size: 2rem;
-    text-align: center;
-    color: #1B4965;
-    margin-bottom: 20px;
-}
-.categories{
-    z-index: 2;
-}
-.category{
-    margin-top: 10px;   
-}
-
-.pagination-container{
-    z-index: 2;
-}
-.page-link:focus, .page-link:active{
-    box-shadow: none;
-    outline: none;
-
-
-}
-label{
-    font-size: 1rem;
-    color: black;
-    padding: 5px;
-}
-
-
-.job-list{
-    position: relative;
-    left: -50%;
-    z-index: 1;
-   
-}
-.job-list h1{
-    font-size: 2rem;
-    color: #1B4965;
-    margin-bottom: 20px;
-    text-align: center;
-    position: relative;
-    left: 100px;
-}
-.companies h5{
-    font-size: 2rem;
-    color: #1B4965;
-    margin-bottom: 20px;
-    text-align: left;
-    position: relative;
-    left: 100px;
-}
-
-.job-container{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    margin-top: 20px;
-   margin: 0 50%;
-   
-}
-.card-body img{
-    width: 25%;
-    margin-bottom: 5px;
-}
-.card-subtitle{
-    font-size: 1.2rem;
-    color:black;
-}
-.card-text{
-    font-size: 1rem;
-    color: black;
-    padding: 5px;
-   
-}
-.des{
-    margin: 4px;
-}
-#city{
-    border: none;
-    background: #18314F;
-    padding: 5px 10px;
-    border-radius: 5px;
-    color: white;
-    font-size: 0.8rem;
-}
-#level{
-    border: none;
-    background: #384E77;
-    padding: 5px 10px;
-    border-radius: 5px;
-    color: white;
-    font-size: 0.8rem
-}
-.pagination-container{
-   position: relative;
-   left: 250%;
-   margin-top: 20px;
-}
-/****job page*/
-.job-details{
-    padding: 0 7%;
-}
-.job-box{
-    margin:10% 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid #26C485;
-    border-radius: 15px;
-    width: 100%;
-    height: 120px;
-    padding: 10px 20px;
-   
-}
-.job-box img{
-width: 15%;
-
-}
-img{
-    width: 100%;
-}
-.description{
-    position: relative;
-    left: -22%;
-}
-#app{
-    border: none;
-    padding: 10px 30px;
-    background-color: #26C485;
-    color: white;
-    border-radius: 10px;
-    margin-top: 10px;
-    transition: scale 400ms
-}
-#app:hover{
-    background-color: black;
-    color: white;
-    scale: 115%;
-}
-.adds-d .images img{
-    width: 25%;
-}
-.adds-d{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-
-}
-.job-info{
-    margin: 3%;
-}
-ul{
-    list-style: square;
-}
-
-.company-image{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    border: 1px solid whitesmoke;
-    width: 80%;
-    height: 70px;
-    border-radius: 8px;
-
-} 
-.companies{
-    margin-top: 10%;
-}
-.company-image img{
-    width: 5%;
-   
-}
-.slide-right{animation:slide-right .9s cubic-bezier(.68,-.55,.265,1.55) infinite alternate-reverse both}
-
-
- @keyframes slide-right{0%{transform:translateX(0)}100%{transform:translateX(100px)}}
-
-
- /****Footer section*/
-.footer{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 30px;
-    padding: 10%;
-    background-color: #000;
-    color: white;
-  }
-  #News{
-    color: #26C485;
-  }
-  .end{
-    color: black;
-  }
-  .end{
-    text-align: center;
-    font-size: 1rem;
-    color: white;
-    background: black;
-    height:30px;
-    
-  }
- #icon{
-    padding: 15px;
-    font-size: 1.5rem;
-    cursor: pointer;
-
- }
- @media (min-width: 700px) and (max-width: 1024px) {
-  .footer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-
-  }
-  .company-image img{
-    width: 10%;
-    margin: 20px;
-    
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .container-box {
-    width: 100%;
-    padding: 13.5rem 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
- 
- }
+  width: 80%;
+  height: 200px;
+  background: #1b4965;
+  padding: 30px;
+  border-radius: 15px;
+  margin-top: 10%;
+}
+.container-details {
+  text-align: center;
+}
+#head {
+  font-size: 2rem;
+  color: white;
+}
+.container-details p {
+  color: white;
+  font-size: 1rem;
+}
+.search-bar {
+  position: relative;
+}
+.search-bar input {
+  padding: 2px;
+  width: 26%;
+  border: none;
+}
 
+.location {
+  margin-left: -25px;
+}
+.search-bar input:focus {
+  outline: none;
+  border: none;
+}
+.bi-search {
+  position: absolute;
+  left: 40%;
+  top: 5px;
 
-  .social-icons{
-    text-align: center;
-  }
-  .search-bar input{
-    width: 48%;
+  cursor: pointer;
+}
+.bi-geo {
+  position: absolute;
+  right: 32%;
+  top: 2px;
+  cursor: pointer;
 }
 #btn {
-    text-align: center;
-    margin-top: 20px;
-    padding: 10px 30px;
-    font-size: 1rem;
- }
- #head {
-    position: relative;
-    top: 20px;
-    font-size: 3rem;
-  }
-  .container-details p{
-    padding: 20px;
-    font-size: 1.1rem;
-           
+  border: none;
+  padding: 5px 20px;
+  border-radius: 3px;
+  transition: 300ms;
+}
+#btn:hover {
+  background: #26c485;
+  color: white;
+  cursor: pointer;
+}
+#logo {
+  color: #26c485;
+  font-size: 1.5rem;
+}
+.navbar-brand {
+  font-size: 1.5rem;
+  color: black;
+}
+#loginBtn,
+#logoutBtn {
+  font-size: 17px;
+  padding: 8px 25px;
+  border: transparent;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+  background: #26c485;
+  color: white;
+  border-radius: 10px;
 }
 
-.bi-geo::before {
-    position: absolute;
-    left: 150px;
-    top: 2px;
- }
- 
- .bi-search::before {
-    position: absolute;
-    left: 35px;
-    top: 2px;
- }
- .categories{
-
-    display: none;
- }
- 
- .job-container{
-   display: grid;
-   grid-template-columns: repeat(3,1fr);
-   row-gap: 10px;
-   
-    
- }
- #selection {
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    row-gap: 10px;
-  
-  }
- 
-
- 
-
+#loginBtn:hover {
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(30, 144, 255, 1) 0%,
+    rgba(0, 212, 255, 1) 100%
+  );
 }
-@media(max-width:699px){
+
+#loginBtn:active {
+  transform: translate(0em, 0.2em);
+}
+#recuitersBtn {
+  background: transparent;
+  border: none;
+  position: relative;
+  left: -20px;
+}
+#recuitersBtn:hover {
+  color: #26c485;
+  cursor: pointer;
+}
+
+#selection {
+  padding: 0 7%;
+  margin-top: 10%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+#selection h1 {
+  font-size: 2rem;
+  text-align: center;
+  color: #1b4965;
+  margin-bottom: 20px;
+}
+.categories {
+  z-index: 2;
+}
+.category {
+  margin-top: 10px;
+}
+
+.pagination-container {
+  z-index: 2;
+}
+.page-link:focus,
+.page-link:active {
+  box-shadow: none;
+  outline: none;
+}
+label {
+  font-size: 1rem;
+  color: black;
+  padding: 5px;
+}
+
+.job-list {
+  position: relative;
+  left: -50%;
+  z-index: 1;
+}
+.job-list h1 {
+  font-size: 2rem;
+  color: #1b4965;
+  margin-bottom: 20px;
+  text-align: center;
+  position: relative;
+  left: 100px;
+}
+.companies h5 {
+  font-size: 2rem;
+  color: #1b4965;
+  margin-bottom: 20px;
+  text-align: left;
+  position: relative;
+  left: 100px;
+}
+
+.job-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin-top: 20px;
+  margin: 0 50%;
+}
+.card{
+    width: 18rem;
+}
+.card-body img {
+  width: 25%;
+  margin-bottom: 5px;
+}
+.card-subtitle {
+  font-size: 1.2rem;
+  color: black;
+}
+.card-text {
+  font-size: 1rem;
+  color: black;
+  padding: 5px;
+}
+.des {
+  margin: 4px;
+}
+#city {
+  border: none;
+  background: #18314f;
+  padding: 5px 10px;
+  border-radius: 5px;
+  color: white;
+  font-size: 0.8rem;
+}
+#level {
+  border: none;
+  background: #384e77;
+  padding: 5px 10px;
+  border-radius: 5px;
+  color: white;
+  font-size: 0.8rem;
+}
+.pagination-container {
+  position: relative;
+  left: 250%;
+  margin-top: 20px;
+}
+/****job page*/
+.job-details {
+  padding: 0 7%;
+}
+.job-box {
+  margin: 10% 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #26c485;
+  border-radius: 15px;
+  width: 100%;
+  height: 120px;
+  padding: 10px 20px;
+}
+.job-box img {
+  width: 15%;
+}
+img {
+  width: 100%;
+}
+.description {
+  position: relative;
+  left: -22%;
+}
+#app {
+  border: none;
+  padding: 10px 30px;
+  background-color: #26c485;
+  color: white;
+  border-radius: 10px;
+  margin-top: 10px;
+  transition: scale 400ms;
+}
+#app:hover {
+  background-color: black;
+  color: white;
+  scale: 115%;
+}
+.adds-d .images img {
+  width: 25%;
+}
+.adds-d {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.job-info {
+  margin: 3%;
+}
+ul {
+  list-style: square;
+}
+
+.company-image {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 1px solid whitesmoke;
+  width: 80%;
+  height: 70px;
+  border-radius: 8px;
+}
+.companies {
+  margin-top: 10%;
+}
+.company-image img {
+  width: 5%;
+}
+.slide-right {
+  animation: slide-right 0.9s cubic-bezier(0.68, -0.55, 0.265, 1.55) infinite
+    alternate-reverse both;
+}
+
+@keyframes slide-right {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(100px);
+  }
+}
+
+/****Footer section*/
+.footer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  padding: 10%;
+  background-color: #000;
+  color: white;
+}
+#News {
+  color: #26c485;
+}
+.end {
+  color: black;
+}
+.end {
+  text-align: center;
+  font-size: 1rem;
+  color: white;
+  background: black;
+  height: 30px;
+}
+#icon {
+  padding: 15px;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+@media (max-width: 699px) {
     .container-box {
-       width: 100%;
-       padding: 12rem 0;
-       display: flex;
-       justify-content: center;
-       align-items: center;
-    
+      width: 100%;
+      padding: 12rem 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     #head {
       position: relative;
       top: 20px;
       font-size: 1.5rem;
     }
-   
-    .container-details p{
-        padding: 20px;
-        font-size: 0.9rem;
-               
+  
+    .container-details p {
+      padding: 20px;
+      font-size: 0.9rem;
     }
-    .search-bar input{
-        width: 45%;
+    .search-bar input {
+      width: 45%;
     }
     #btn {
-       text-align: center;
-       margin-top: 20px;
-       padding: 10px 50px;
+      text-align: center;
+      margin-top: 20px;
+      padding: 10px 50px;
     }
     .bi-geo::before {
-       position: absolute;
-       left: 70px;
-       top: 2px;
+      position: absolute;
+      left: 70px;
+      top: 2px;
     }
-    .categories{
-display:none ;
+    .categories {
+      display: none;
+    }
+  
+    .footer {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+    .card{
+        width: 91.3vw;
+    }
+    .card-text{
+        width: 100%;
     }
    
-    .footer{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
+    .job-container {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+    
     }
- .card{
-    width: 100%;
    
- }
- .job-container{
-    display: grid;
-    grid-template-columns: repeat(1,1fr);
-    text-align: center;
-    
- }
- #selection {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-#icon{
-    font-size: 1rem;
-}
-
-
-
-.company-image img{
-    width: 12%;
-    margin: 20px;
-    
-}
-
-.job-box{
-    margin: 20% 0;
+    #selection {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      
+    }
+  
+    #icon {
+      font-size: 1rem;
+    }
+  
+    .company-image img {
+      width: 12%;
+      margin: 20px;
+    }
+  
+    .job-box {
+      margin: 20% 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 13.5rem 0;
+      text-align: center;
+    }
+    .job-box img {
+      width: 50%;
+      margin-bottom: 50px;
+    }
+    .description {
+      position: relative;
+      left: 4px;
+      text-align: center;
+      font-size: 2rem;
+    }
+    .description h4 {
+      font-size: 2rem;
+    }
+    #app {
+      font-size: 1.5rem;
+    }
+    .adds-d {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
+    .job-info p {
+      width: 100%;
+    }
+  }
+  
+@media (min-width: 700px) and (max-width: 1024px) {
+  .footer {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    padding: 13.5rem 0;
-    text-align: center;
-    
-    
-}
-.job-box img{
-    width: 50%;
-    margin-bottom: 50px;
-}
-.description{
-    position: relative;
-    left: 4px;
-    text-align: center;
-    font-size: 2rem;
-    
-}
-.description h4{
-    font-size: 2rem;
-}
-#app{
-    font-size: 1.5rem;
-}
-.adds-d {
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-}
-.job-info p{
+    align-items: center;
+  }
+  .company-image img {
+    width: 10%;
+    margin: 20px;
+  }
+  .container-box {
     width: 100%;
-}
+    padding: 13.5rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
+  .social-icons {
+    text-align: center;
+  }
+  .search-bar input {
+    width: 48%;
+  }
+  #btn {
+    text-align: center;
+    margin-top: 20px;
+    padding: 10px 30px;
+    font-size: 1rem;
+  }
+  #head {
+    position: relative;
+    top: 20px;
+    font-size: 3rem;
+  }
+  .container-details p {
+    padding: 20px;
+    font-size: 1.1rem;
+  }
 
+  .bi-geo::before {
+    position: absolute;
+    left: 150px;
+    top: 2px;
+  }
 
+  .bi-search::before {
+    position: absolute;
+    left: 35px;
+    top: 2px;
+  }
+  .categories {
+    display: none;
+  }
+
+  .job-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 10px;
+  }
+  #selection {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 10px;
+  }
 }
